src/app/components/Archives/ProjectArchive.module.css
.container {
  gap: 1rem;
  width: 100%;
  flex-grow: 1;
  min-height: 0;
  padding: 1rem;
  display: flex;
  overflow-y: auto;
  text-align: center;
  align-items: center;
  flex-direction: column;
  background-color: transparent;
}

.createContainer {
  gap: 3rem;
  width: 100%;
  max-width: 1024px;
  padding-top: 2rem;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.title p {
  color: var(--color-text-muted);
}

.createContainer ul {
  gap: 1rem;
  width: 100%;
  display: grid;
      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));

}

.createContainer ul li {
  gap: 1rem;
  padding: 1rem;
  padding-inline: 2rem;
  border-radius: 1rem;
  background-color: var(--color-surface);
  cursor: pointer;
  display: flex;
  justify-content: space-between;
}

.createContainer ul li:hover {
  background-color: var(--color-surface-hover);
}

.createContainer ul .createProject {
  background-color: transparent;
  border: dashed .2rem;
  justify-content: center;
}

